# timer

./: README.md  pyproject.toml
.github/workflows/: ci.yml
tests/: test_timer.py
timer/: __init__.py  __init__.pyi
